# dash_analytic

./: .gitignore  README.md  app.py
bm_analytic/: pyproject.toml
bm_analytic/bm_analytic/: app.py  functions.py
bm_analytic/bm_analytic/data/: BM_DataSet_1000.csv  doc2vec.model
bm_analytic/modeling/: doc2vec_model.py
bm_analytic/tests/: test_bm_analytic.py
