[tool.poetry]
name = "bm_analytic"
version = "0.1.0"
description = ""
authors = ["Daiki Ikeuchi <bass.92model@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.20.0"
pandas = "^1.2.1"
dash = "^1.19.0"
dash-daq = "^0.5.0"
gensim = "^3.8.3"
openpyxl = "^3.0.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"